--- a/src/pages/3.astro
+++ b/src/pages/3.astro
@@ -285,7 +285,8 @@ import Layout from "../layouts/Layout.astro";
   }
 
   .section-bg-pricing {
-    padding-bottom: 128px;
+    margin-top: 10%;
+    margin-bottom: 10%;
   }
 
   .featured-works-numbers {
@@ -329,6 +330,8 @@ import Layout from "../layouts/Layout.astro";
     font-style: normal;
     font-weight: 600;
     line-height: 119.5%;
+    margin-top: 24px;
+    margin-bottom: 8px;
   }
 
   .cards-txt-white {
@@ -340,6 +343,10 @@ import Layout from "../layouts/Layout.astro";
     font-weight: 400;
     line-height: 150%;
     max-width: 376px;
+    margin-top: 32px;
+    margin-bottom: 32px;
+    margin-left: 37px;
+    margin-right: 37px;
   }
 
   .bg-blue {
@@ -354,8 +361,10 @@ import Layout from "../layouts/Layout.astro";
     font-weight: 400;
     line-height: 150%;
     max-width: 376px;
-    padding-top: 32px;
-    padding-bottom: 32px;
+    margin-top: 32px;
+    margin-bottom: 32px;
+    margin-left: 37px;
+    margin-right: 37px;
   }
   .title-orange-under {
     color: #f77f00;
@@ -367,7 +376,9 @@ import Layout from "../layouts/Layout.astro";
     line-height: 100%;
   }
   .icon-card {
-    padding-top: 46px;
+    display: block;
+    margin-top: 50px;
+    margin-left: 190px;
     width: 72px;
     height: 66px;
   }
@@ -379,8 +390,8 @@ import Layout from "../layouts/Layout.astro";
     font-style: normal;
     font-weight: 600;
     line-height: 119.5%;
-    padding-top: 34px;
-    padding-bottom: 9px;
+    margin-top: 24px;
+    margin-bottom: 8px;
   }
 
   .commercial-card-alignment {
@@ -389,16 +400,10 @@ import Layout from "../layouts/Layout.astro";
   }
 
   .commercial-card {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    height: auto;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
     text-align: center;
     font-family: arial serif;
     width: calc(33.3333%);
-    aspect-ratio: 1 / 1;
   }
 
   .price-orange {
@@ -665,7 +670,7 @@ import Layout from "../layouts/Layout.astro";
     padding-bottom: 10%;
   }
   .white-text {
-    margin-top: 15px;
+    margin-top: 3%;
     width: 70%;
     color: #dbdbdb;
     font-family: Inter, serif;
@@ -673,22 +678,20 @@ import Layout from "../layouts/Layout.astro";
     font-style: normal;
     font-weight: 400;
     line-height: 150%;
-    padding-left: 16px;
+    margin-left: 10%;
+    margin-bottom: 10%;
   }
 
   .icon-installation {
     margin-top: 10%;
-    margin-left: 5%;
+    margin-left: 10%;
     background-color: white;
     width: 74px;
     height: 75px;
   }
 
   .more-boxes {
-    position: relative;
     width: calc(33.3333% - 24px);
-    aspect-ratio: 1/0.8;
-    padding-left: 16px;
   }
 
   .title-underline {
@@ -715,14 +718,14 @@ import Layout from "../layouts/Layout.astro";
   }
 
   .h3-text {
-    margin-top: 80px;
+    margin-top: 15%;
     color: #ffffff;
     font-family: Poppins, serif;
     font-size: 24px;
     font-style: normal;
     font-weight: 600;
     line-height: 119.5%;
-    padding-left: 16px;
+    margin-left: 10%;
   }
 
   .icon-link {
