--- a/src/pages/3.astro
+++ b/src/pages/3.astro
@@ -437,8 +437,8 @@ import Layout from "../layouts/Layout.astro";
     font-style: normal;
     font-weight: 400;
     line-height: 150%;
-    padding-bottom: 30px;
-    padding-top: 12px;
+    margin-bottom: 30px;
+    margin-top: 12px;
   }
 
   .txt-exp {
@@ -505,9 +505,9 @@ import Layout from "../layouts/Layout.astro";
   }
 
   .h1-experience {
-    padding-top: 8px;
-    padding-bottom: 36px;
-    width: 45%;
+    margin-top: 8px;
+    margin-bottom: 36px;
+    max-width: 460px;
     font-family: Droid Sans serif;
     font-size: 48px;
     font-style: normal;
@@ -848,8 +848,8 @@ import Layout from "../layouts/Layout.astro";
     font-style: normal;
     font-weight: 700;
     line-height: normal;
-    padding-top: 11px;
-    padding-bottom: 29px;
+    margin-top: 11px;
+    margin-bottom: 29px;
   }
 
   .text {
@@ -862,6 +862,6 @@ import Layout from "../layouts/Layout.astro";
     font-weight: 400;
     line-height: 24px;
     margin: 16px;
-    padding-bottom: 30px;
+    margin-bottom: 30px;
   }
 </style>
