--- a/src/pages/3.astro
+++ b/src/pages/3.astro
@@ -659,32 +659,31 @@ import Layout from "../layouts/Layout.astro";
   }
 
   .white-text-width {
-    width: 90%;
     color: #dbdbdb;
     font-family: Inter, serif;
     font-size: 16px;
     font-style: normal;
     font-weight: 400;
     line-height: 150%;
-    padding-left: 16px;
-    padding-bottom: 10%;
+    margin-left: 16px;
+    margin-bottom: 56px;
   }
   .white-text {
     margin-top: 3%;
-    width: 70%;
+    width: 60%;
     color: #dbdbdb;
     font-family: Inter, serif;
     font-size: 16px;
     font-style: normal;
     font-weight: 400;
     line-height: 150%;
-    margin-left: 10%;
-    margin-bottom: 10%;
+    margin-left: 40px;
+    margin-bottom: 32px;
   }
 
   .icon-installation {
-    margin-top: 10%;
-    margin-left: 10%;
+    margin-top: 40px;
+    margin-left: 40px;
     background-color: white;
     width: 74px;
     height: 75px;
@@ -712,20 +711,20 @@ import Layout from "../layouts/Layout.astro";
     font-style: normal;
     font-weight: 700;
     line-height: normal;
-    padding-left: 16px;
-    padding-bottom: 10%;
-    padding-top: 5%;
+    margin-left: 16px;
+    margin-bottom: 40px;
+    margin-top: 16px;
   }
 
   .h3-text {
-    margin-top: 15%;
+    margin-top: 56px;
     color: #ffffff;
     font-family: Poppins, serif;
     font-size: 24px;
     font-style: normal;
     font-weight: 600;
     line-height: 119.5%;
-    margin-left: 10%;
+    margin-left: 40px;
   }
 
   .icon-link {
@@ -755,10 +754,7 @@ import Layout from "../layouts/Layout.astro";
   }
 
   .section {
-    padding-left: 24px;
-    padding-right: 24px;
-    padding-top: 1px;
-    padding-bottom: 1px;
+    padding: 1px 24px;
   }
 
   .bg-light-grey {
@@ -839,7 +835,6 @@ import Layout from "../layouts/Layout.astro";
   }
 
   .h1-width {
-    margin: auto;
     text-align: center;
     font-family:
       Droid Sans,
@@ -853,7 +848,6 @@ import Layout from "../layouts/Layout.astro";
   }
 
   .text {
-    width: 87%;
     color: grey;
     text-align: center;
     font-family: Inter, serif;
@@ -861,7 +855,6 @@ import Layout from "../layouts/Layout.astro";
     font-style: normal;
     font-weight: 400;
     line-height: 24px;
-    margin: 16px;
-    margin-bottom: 30px;
+    margin: 16px 16px 30px;
   }
 </style>
