--- a/src/pages/3.astro
+++ b/src/pages/3.astro
@@ -360,11 +360,8 @@ import Layout from "../layouts/Layout.astro";
     font-style: normal;
     font-weight: 400;
     line-height: 150%;
-    max-width: 376px;
-    margin-top: 32px;
-    margin-bottom: 32px;
-    margin-left: 37px;
-    margin-right: 37px;
+    width: 300px;
+    margin: 32px 80px;
   }
   .title-orange-under {
     color: #f77f00;
